<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.zeeshan.tawkto.ui.userdetail.UserDetailViewModel" />
    </data>

    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context="com.zeeshan.tawkto.ui.userdetail.UserDetailFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clUserDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/user_profile"
                    app:civ_border_color="@color/purple_700"
                    app:civ_border_width="1dp"
                    app:layout_constraintBottom_toTopOf="@+id/tvFollowers"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tvFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="26dp"
                    android:text="@string/followers"
                    app:layout_constraintBottom_toTopOf="@+id/cvUserDetail"
                    app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivProfile" />


                <TextView
                    android:id="@+id/tvFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/following"
                    app:layout_constraintBottom_toBottomOf="@+id/tvFollowers"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvFollowers"
                    app:layout_constraintTop_toTopOf="@+id/tvFollowers" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvUserDetail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="4dp"
                    app:layout_constraintBottom_toTopOf="@+id/tvNoteTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvFollowers">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <TextView
                            android:id="@+id/tvName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/name"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvCompany"
                            app:layout_constraintTop_toTopOf="parent" />


                        <TextView
                            android:id="@+id/tvNameValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="@+id/tvName"
                            app:layout_constraintStart_toEndOf="@+id/tvName"
                            app:layout_constraintTop_toTopOf="@+id/tvName" />


                        <TextView
                            android:id="@+id/tvCompany"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/company"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvName"
                            app:layout_constraintBottom_toBottomOf="@+id/tvCompanyName"
                            app:layout_constraintTop_toTopOf="@+id/tvCompanyName"  />

                        <TextView
                            android:id="@+id/tvCompanyName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/tvName"
                            app:layout_constraintStart_toEndOf="@+id/tvCompany"/>

                        <TextView
                            android:id="@+id/tvLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/location"
                            app:layout_constraintBottom_toTopOf="@+id/tvBlog"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvCompanyName" />

                        <TextView
                            android:id="@+id/tvLocationName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="8dp"
                            app:layout_constraintBottom_toBottomOf="@+id/tvLocation"
                            app:layout_constraintStart_toEndOf="@+id/tvLocation"
                            app:layout_constraintTop_toTopOf="@+id/tvLocation" />

                        <TextView
                            android:id="@+id/tvBlog"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/blog"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

                        <TextView
                            android:id="@+id/tvBlogLink"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:autoLink="all"
                            app:layout_constraintBottom_toBottomOf="@+id/tvBlog"
                            app:layout_constraintStart_toEndOf="@+id/tvBlog"
                            app:layout_constraintTop_toTopOf="@+id/tvBlog" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/tvNoteTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:text="@string/notes"
                    app:layout_constraintBottom_toTopOf="@+id/cvNote"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cvUserDetail" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvNote"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvNoteTitle">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:autofillHints="Note"
                        android:background="@null"
                        android:gravity="top|start"
                        android:hint="@string/notes"
                        android:inputType="textMultiLine"
                        android:lines="8"
                        android:maxLines="10"
                        android:minLines="6"
                        android:scrollbars="vertical" />
                </androidx.cardview.widget.CardView>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cvNote" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>
</layout>
